--- a/page_1/index.html
+++ b/page_1/index.html
@@ -14,8 +14,8 @@
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
 					<h1 class="header text-center">
-						<span>Получите видео-инструкцию</span>
-						<strong class="text-uppercase">Как заработать свой первый миллион</strong>
+						<span>English with</span>
+						<strong class="text-uppercase">English Galaxy</strong>
 					</h1>
 				</div>
 			</div>
