--- a/page_2/index.html
+++ b/page_2/index.html
@@ -37,7 +37,7 @@
 					<div class="col-md-3 col-sm-4 col-xs-12">
 						<div class="wrap">
 							<div class="wrap-block">
-								<button class="button header-btn">
+								<button class="button header-btn popup-btn">
 									получить консультацию
 								</button>
 							</div>
@@ -82,6 +82,120 @@
 		</div>
 	</main>
 
+	<div class="section">
+		<div class="container">
+			<h2 class="section-header">Преимущества работы с нами</h2>
+			<div class="features-slider">
+				<div class="features-block">
+					<div class="features-img">
+						<picture>
+							<source srcset="img/features/coin.svg" type="image/">
+							<img src="img/features/coin.png" alt="Платите по факту">
+						</picture>
+					</div>
+					<h3>Платите по факту</h3>
+					<p>Вы оплачиваете выполненные работы только после их выполнения. <br>Никаких скрытых доплат и промежуточных платежей.</p>
+				</div>
+				<div class="features-block">
+					<div class="features-img">
+						<picture>
+							<source srcset="img/features/folder.svg" type="image/">
+							<img src="img/features/folder.png" alt="Заключаем договор">
+						</picture>
+					</div>
+					<h3>Заключаем договор</h3>
+					<p>Перед началом работ заключаем договор на юридическое лицо. <br>Вы можете быть уверены, что все обязательства будут выполнены.</p>
+				</div>
+				<div class="features-block">
+					<div class="features-img">
+						<picture>
+							<source srcset="img/features/clock.svg" type="image/">
+							<img src="img/features/clock.png" alt="Точно в срок">
+						</picture>
+					</div>
+					<h3>Точно в срок</h3>
+					<p>Работаем строго по установленным срокам, которые прописаны в договоре. Если не успеваем, Вы платите меньше</p>
+				</div>
+				<div class="features-block">
+					<div class="features-img">
+						<picture>
+							<source srcset="img/features/pig.svg" type="image/">
+							<img src="img/features/pig.png" alt="Экономите на материалах">
+						</picture>
+					</div>
+					<h3>Экономите на материалах</h3>
+					<p>Мы являемся структурным подразделением компании поставщика строительных смесей gicema.ru  и даём Вам самые выгодные цены.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="popup">
+		<div class="popup-dialog">
+			<div class="popup-content">
+				<button class="popup-close">&times;</button>
+				<h4 class="popup-header">
+					Заинтересовало?
+				</h4>
+				<p>Оставьте контактные данные <br>для связи</p>
+				<div class="main-form popup-form">
+					<form action="#">
+						<label for="#">Ваше имя</label>
+						<input class="main-form-input" type="text">
+						<label for="#">Номер телефона</label>
+						<input class="main-form-input" type="text">
+						<label for="#">Сообщение</label>
+						<textarea class="main-form-input" rows="5"></textarea>
+						<button class="main-form-btn button" type="submit">оставьте заявку</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="slick/slick.css">
+    <link rel="stylesheet" href="slick/slick-theme.css">
+
+	<script src="slick/slick.min.js"></script>
+	<script>
+		$(document).ready(function(){
+		  $('.popup-btn').on('click', function(event) {
+		  	event.preventDefault();
+		  	$('.popup').fadeIn();
+		  });
+		  $('.popup-close').on('click', function(event) {
+		  	event.preventDefault();
+		  	$('.popup').fadeOut();
+		  });
+		  $('.features-slider').slick({
+		  	infinite: true,
+		  	slidesToShow: 4,
+		  	slidesToScroll: 1,
+		  	responsive: [
+		  	   {
+		  	     breakpoint: 991,
+		  	     settings: {
+		  	       slidesToShow: 2,
+		  	       prevArrow: '<button class="prev arrow"></button>',
+		  	       nextArrow: '<button class="next arrow"></button>',
+		  	       slidesToScroll: 2
+		  	     }
+		  	   },
+		  	   {
+		  	     breakpoint: 767,
+		  	     settings: {
+		  	       slidesToShow: 1,
+		  	       slidesToScroll: 1,
+		  	       prevArrow: '<button class="prev arrow"></button>',
+		  	       nextArrow: '<button class="next arrow"></button>'
+		  	     }
+		  	   }
+		  	 ]
+		  });
+		});
+	</script>
   </body>
 </html>
