--- a/page_2/index.html
+++ b/page_2/index.html
@@ -82,7 +82,7 @@
 		</div>
 	</main>
 
-	<div class="section">
+	<section class="section">
 		<div class="container">
 			<h2 class="section-header">Преимущества работы с нами</h2>
 			<div class="features-slider">
@@ -129,7 +129,69 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</section>
+
+	<section class="price">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 col-md-offset-4">
+					<div class="section-header section-header-light">
+						<h2>Цены</h2>
+						<p>Выберите вариант, который подходит Вам:</p>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="price-button">
+						<button class="button price-header-btn" data-toggle="modal">Рассчитать точную стоимость</button>
+					</div>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2">
+					<div class="price-block">
+						<h4>Штукатурка вашим материалом</h4>
+						<img src="img/prices/1.jpg" alt="Штукатурка вашим материалом">
+						<span class="price-tag">от 300 руб/м<sup>2</sup></span>
+						<ul class="price-list">
+							<li>Проведение работ</li>
+							<li>Уборка</li>
+						</ul>
+						<button class="button">Заказать</button>
+					</div>
+				</div>
+				<div class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2">
+					<div class="price-block">
+						<h4>Штукатурка под шпаклёвку</h4>
+						<img src="img/prices/2.jpg" alt="Штукатурка под шпаклёвку">
+						<span class="price-tag">от 530 руб/м<sup>2</sup></span>
+						<ul class="price-list">
+							<li>Завоз материала и его подъём</li>
+							<li>Проведение работ</li>
+							<li>Уборка</li>
+							<li>Гарантия 2 года</li>
+						</ul>
+						<button class="button">Заказать</button>
+					</div>
+				</div>
+				<div class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2">
+					<div class="price-block">
+						<h4>Штукатурка под обои</h4>
+						<img src="img/prices/3.jpg" alt="Штукатурка под обои">
+						<span class="price-tag">от 560 руб/м<sup>2</sup></span>
+						<ul class="price-list">
+							<li>Завоз материала и его подъём</li>
+							<li>Проведение работ</li>
+							<li>Уборка</li>
+							<li>Гарантия 2 года</li>
+							<li>Можно сразу клеить обои</li>
+						</ul>
+						<button class="button">Заказать</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 	<div class="popup">
 		<div class="popup-dialog">
