--- a/page_2/index.html
+++ b/page_2/index.html
@@ -581,6 +581,190 @@
 		<img class="problems-woman" src="img/problems-woman.png" alt="Woman">
 	</section>
 
+	<section class="materials">
+		<div class="container">
+			<div class="section-header">
+				<h2>Материалы</h2>
+				<p>Мы работаем только качественными, проверенными временем материалами, следующих производителей:</p>
+
+				<div class="features-slider materials-slider">
+					<div class="features-block">
+						<div class="materials-img">
+							<picture>
+								<img src="img/materials/1.png" alt="Knauf">
+							</picture>
+						</div>
+						<h3>Knauf</h3>
+						<p>МП-75 <strong>245</strong> руб/меш</p>
+						<a class="materials-link" href="#">Сертификат</a>
+					</div>
+					<div class="features-block">
+						<div class="materials-img">
+							<picture>
+								<img src="img/materials/2.png" alt="Заключаем договор">
+							</picture>
+						</div>
+						<h3>Volma</h3>
+						<p>Аква слой <strong>245</strong> руб/меш <br>Гипс актив <strong>245</strong> руб/меш</p>
+						<a class="materials-link" href="#">Сертификат</a>
+					</div>
+					<div class="features-block">
+						<div class="materials-img">
+							<picture>
+								<img src="img/materials/3.png" alt="Forman">
+							</picture>
+						</div>
+						<h3>Forman</h3>
+						<p>Аква слой <strong>245</strong> руб/меш <br>Гипс актив <strong>245</strong> руб/меш</p>
+						<a class="materials-link" href="#">Сертификат</a>
+					</div>
+					<div class="features-block">
+						<div class="materials-img">
+							<picture>
+								<img src="img/materials/4.png" alt="Ceresit">
+							</picture>
+						</div>
+						<h3>Ceresit</h3>
+						<p>Аква слой <strong>245</strong> руб/меш <br>Гипс актив <strong>245</strong> руб/меш</p>
+						<a class="materials-link" href="#">Сертификат</a>
+					</div>
+				</div>
+
+				<p class="materials-offer">Вы можете приобрести материалы по оптовым ценам на сайте <a class="materials-link" href="#">gicema.ru</a> или по телефону <strong>+7 495 790 69 90</strong></p>
+			</div>
+		</div>
+	</section>
+
+	<section class="tour">
+		<div class="container">
+			<div class="main-content">
+				<div class="row">
+					<div class="col-md-7 col-lg-5 col-sm-12">
+						<div class="main-title">
+							<h1>Посмотрите <br>как мы работаем</h1>
+							<p class="main-subtitle tour-subtitle">Хотите удостовериться в профессионализме наших сотрудников?</p>
+							<p class="main-subtitle tour-subtitle">Вы можете сделать это, приехав на один из наших объектов, и понаблюдав за ходом работ. Увидите оборудование, материалы и качество исполнения.</p>
+						</div>
+					</div>
+					<div class="col-lg-4 col-lg-offset-3 col-md-5 col-md-offset-0 col-sm-8 col-sm-offset-2">
+						<div class="main-form">
+							<h2 class="main-form-header">Для расчета точной стоимости <br>закажите <strong>выезд замерщика</strong></h2>
+							<form class="form" action="#">
+								<label for="#">Ваше имя</label>
+								<input class="form-input" type="text">
+								<label for="#">Номер телефона</label>
+								<input class="form-input" type="text">
+								<button class="form-btn button" type="submit">оставьте заявку</button>
+								<small>Подберем ближайщий к вам объект</small>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="upsell">
+		<div class="container">
+			<div class="section-header section-header-light">
+				<h2>Дополнительные услуги</h2>
+				<p>Помимо штукатурных работ Вы можете заказать у нас следующие услуги</p>
+			</div>
+
+			<div class="upsell-blocks">
+				<div class="row">
+					<div class="col-md-4">
+						<div class="upsell-block">
+							<img src="img/upsell/1.jpg" alt="Монтаж электропроводки">
+							<p>Монтаж электропроводки</p>
+							<button class="button">Цены</button>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="upsell-block">
+							<img src="img/upsell/2.jpg" alt="Стяжка пола">
+							<p>Стяжка пола</p>
+							<button class="button">Цены</button>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="upsell-block">
+							<img src="img/upsell/3.jpg" alt="Сантехнические работы">
+							<p>Сантехнические работы</p>
+							<button class="button">Цены</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="contacts">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<h2>Контакты</h2>
+					<p>Адрес офиса: <br>Челябинск, копейское шоссе, 12, офис 34</p>
+					
+					<div class="map">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2281.461528407051!2d61.50587531543139!3d55.12269904787872!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x43c5f31d5482dc45%3A0x2c0569407f47535b!2z0JrQvtC_0LXQudGB0LrQvtC1INGILiwgMTIsIDM0LCDQp9C10LvRj9Cx0LjQvdGB0LosINCn0LXQu9GP0LHQuNC90YHQutCw0Y8g0L7QsdC7LiwgNDU0MDEy!5e0!3m2!1sru!2sru!4v1519572156637" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+					</div>
+
+					<p>Номер телефона: <br><strong> +7 495 771 05 08</strong></p>
+					<p>Email: <br><a class="contacts-link" href="mailto:order@gipsolit.ru">order@gipsolit.ru</a></p>
+					<p>Реквизиты: <br>ИНН 35453453  ОГРН 34234234</p>
+				</div>
+				<div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1 col-sm-6 col-sm-offset-3">
+					<div class="main-form contacts-form">
+						<h2 class="contacts-form-header">Оставьте контактные данные для связи</h2>
+						<form class="form" action="#">
+							<label for="#">Ваше имя</label>
+							<input class="form-input" type="text">
+
+							<label for="#">Номер телефона</label>
+							<input class="form-input" type="text">
+
+							<label for="#">Email</label>
+							<input class="form-input" type="text">
+
+							<label for="#">Сообщение</label>
+							<textarea class="form-textarea" rows="5"></textarea>
+
+							<button class="form-btn button" type="submit">Записаться на просмотр</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<footer>
+		<div class="container">
+			<div class="row">
+				
+				<div class="col-md-4">
+					<div class="logo">
+						<img src="img/logo.png" alt="Гипсолит. Штукатурка стен.">
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="footer-contacts">
+						<p><br><strong> +7 495 771 05 08</strong></p>
+						<p><br><a class="contacts-link" href="mailto:order@gipsolit.ru">order@gipsolit.ru</a></p>
+						<p class="contacts-link">Пн-Пт: с 9:00 до 18:00</p>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="footer-dev">
+						<p>Разработка <br>сайта:</p>
+						<img src="img/footer-logo.png" alt="Developers Logotype">
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</footer>
+
 	<div class="popup">
 		<div class="popup-dialog">
 			<div class="popup-content">
