--- a/page_2/index.html
+++ b/page_2/index.html
@@ -795,8 +795,8 @@
 
 	<script src="slick/slick.min.js"></script>
 
-	<link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
+	<link  href="css/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
+	<script src="js/fotorama.js"></script> <!-- 16 KB -->
 	<script>
 		$(document).ready(function(){
 		  $('.popup-btn').on('click', function(event) {
